--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,7 +1,7 @@
 <% @page_heading = _("Categories") %>
 
 <div class='left_form'>
-  <%= form_tag :action=>"edit", :id => @category.id do %>
+  <%= form_tag :action=>"admin/categories/edit", :id => @category.id do %>
     <%= render 'form' %>
   <% end %>
 </div>
